--- a/Needle11/public/index.html
+++ b/Needle11/public/index.html
@@ -126,7 +126,7 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Jobs</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
         <a href="#">Employers</a>
     </div>
 
