HTML pages retouched and changes made (2025-03-16)
1: When creating a new Employee account and clicking submit, it now redirects the user to the employee login page
2:  Pages now have proper nav bar redirects (except for privacy, faq, help since those pages don't exist yet)
[Comment: Removed "About.html" as the page is the exact same as "confirmation.html"]
3: Added a description box for job posting (Limit 1000 characters)
4: For the nepotism survey, there is now a field for the user who is submitting the form as well as a field asking for the name of the person they are referring

--- a/Needle11/public/Signup.html
+++ b/Needle11/public/Signup.html
@@ -184,7 +184,7 @@
     <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a href="aboutus.html">About Us</a>
             <a href="contact.html">Contact</a>
             <a href="privacy.html">Privacy</a>
             <a href="terms.html">Terms</a>
@@ -201,7 +201,7 @@
     
     <div class="container">
         <a href="Login.html">Already have an account? Sign in</a>
-        <h1>Needle</h1>
+        <h1>Needel</h1>
         <h2>Signup</h2>
         <h4>The Signup is free. This takes only a few minutes.<br> Make your job search easier.</h4>
         
@@ -249,6 +249,7 @@
                 const result = await response.json();
                 if (response.ok) {
                     alert(result.message);
+                    window.location.href = 'Login.html'; // Redirect to Login page
                 } else {
                     errorMessage.textContent = result.message;
                 }
