--- a/Needle11/public/contact.html
+++ b/Needle11/public/contact.html
@@ -114,8 +114,7 @@
         <a href="index.html">Home</a>
         <a href="aboutus.html">About</a>
         <a href="#">Jobs</a>
-        <a href="contact.html">Contact</a>
-        <a href="#">Employers</a>
+        <a href="Employer.html">Employers</a>
     </div>
 
     <!-- Main Content -->
