--- a/Needle11/public/Apply.html
+++ b/Needle11/public/Apply.html
@@ -135,7 +135,7 @@
     <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a href="aboutus.html">About Us</a>
             <a href="contact.html">Contact us</a>
             <a href="terms.html">Terms</a>
             <a href="employer.html">Employer</a>
