--- a/Needle11/public/Employer.html
+++ b/Needle11/public/Employer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employer Login | Needle</title>
+    <title>Employer Login | Needel</title>
     <style>
         * {
             margin: 0;
@@ -154,7 +154,7 @@
     <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a href="aboutus.html">About Us</a>
             <a href="contact.html">Contact us</a>
             <a href="privacy.html">Privacy</a>
             <a href="terms.html">Terms</a>
@@ -164,7 +164,7 @@
 
     <!-- Login Form -->
     <div class="container">
-        <img src="logo11.png" alt="Needle Logo">
+        <img src="logo11.png" alt="Needel Logo">
         <h1>Employer Login</h1>
         
         <form class="form-container" onsubmit="return loginUser(event)">
@@ -178,6 +178,7 @@
         </form>
         
         <a href="Employacc.html">Don't have an account? Get one!</a>
+        <a href="forgot.html">Forgot Password?</a>
         <div id="error-message" class="error-message">Invalid email or password</div>
     </div>
 
