--- a/Needle11/public/Employerpage.html
+++ b/Needle11/public/Employerpage.html
@@ -145,7 +145,7 @@
     <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a href="aboutus.html">About Us</a>
             <a href="contact.html">Contact us</a>
             <a href="privacy.html">Privacy</a>
             <a href="terms.html">Terms</a>
