--- a/Needle11/public/home.html
+++ b/Needle11/public/home.html
@@ -193,7 +193,7 @@
 <body>
     <div class="navbar">
         <a href="Home.html">Home</a>
-        <a href="about.html">About Us</a>
+        <a href="aboutus.html">About Us</a>
         <a href="contact.html">Contact us</a>
         <a href="privacy.html">Privacy</a>
         <a href="terms.html">Terms</a>
