--- a/Needle11/public/question.html
+++ b/Needle11/public/question.html
@@ -37,7 +37,7 @@
             margin-top: 10px;
             color: #4c3c92;
         }
-        textarea, input[type="radio"] {
+        textarea, input[type="text"], input[type="radio"] {
             margin-top: 5px;
         }
         .submit-button {
@@ -64,6 +64,12 @@
         <p><strong>Disclaimer:</strong> This form is part of our hiring process. The data collected will be used to ensure a fair and impartial recruitment process by identifying and preventing nepotism. Your honesty and cooperation are greatly appreciated.</p>
         
         <form action="confirmation.html" method="get">
+            <label for="full-name">What is your full name?</label>
+            <input type="text" id="full-name" name="full-name" required>
+
+            <label for="referral-name">Who are you referring? (Full name)</label>
+            <input type="text" id="referral-name" name="referral-name" required>
+            
             <p>Have you ever gained a job through a connection with a family member or a close friend?</p>
             <input type="radio" name="nepotism" value="yes" required> Yes<br>
             <input type="radio" name="nepotism" value="no" required> No<br>
