--- a/Needle11/public/question.html
+++ b/Needle11/public/question.html
@@ -67,7 +67,7 @@
             <label for="full-name">What is your full name?</label>
             <input type="text" id="full-name" name="full-name" required>
 
-            <label for="referral-name">Who are you referring? (Full name)</label>
+            <label for="referral-name">Who recommended you? (Full name)</label>
             <input type="text" id="referral-name" name="referral-name" required>
             
             <p>Have you ever gained a job through a connection with a family member or a close friend?</p>
