--- a/Needle11/public/index.html
+++ b/Needle11/public/index.html
@@ -136,7 +136,7 @@
         <h1>Welcome to Needel</h1>
         <p>Calgary's Own Job Bank</p>
         <p class="description">
-            Calgary's Job Bank is dedicated to connecting motivated individuals with career opportunities in their fields of interest. 
+            +Testing+ Calgary's Job Bank is dedicated to connecting motivated individuals with career opportunities in their fields of interest. 
             Our unique Employee Referral Program helps fresh graduates get a head start by connecting them with professionals who can refer 
             them to job opportunities in their industry. Join us in fostering a community where talent meets opportunity!
         </p>
