--- a/Needle11/public/contact.html
+++ b/Needle11/public/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="">
   <link rel="prefetch" href="">
-  <title>Untitled</title><link rel="stylesheet" href="./main.css">
+  <title>Untitled</title><link rel="stylesheet" href="./contact.css">
 <meta name="title" content="Untitled">
 <meta name="description" content="undefined">
 <link rel="canonical" href="https://contact.versoly.page">
@@ -41,27 +41,27 @@ window.vDelayed = {};window.vLoadedDelayed = {};
             <ul class="navbar-col"></ul>
             <ul class="navbar-col">
                 <li>
-                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto] bg-light" href="/#">
+                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto] bg-light" href="front.html">
                         <b>Home</b>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto]" href="#">
+                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto]" href="career.html">
                         <b>Careers</b>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link text-[rgb(51,49,46)]" href="#">
-                        <b class="font-[roboto]">Blog</b>
+                    <a class="nav-link text-[rgb(51,49,46)]" href="aboutus.html">
+                        <b class="font-[roboto]">AboutUs</b>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link text-[rgb(51,49,46)]" href="#">
+                    <a class="nav-link text-[rgb(51,49,46)]" href="contact.html">
                         <b class="font-[roboto]">Contact us</b>
                     </a>
                 </li>
                 <li>
-                    <a class="btn btn-secondary btn-lg nav-link text-[rgb(238,238,238)] bg-[rgb(40,33,56)] hover:text-white hover:bg-primary" href="#">Log In/My Account</a>
+                    <a class="btn btn-secondary btn-lg nav-link text-[rgb(238,238,238)] bg-[rgb(40,33,56)] hover:text-white hover:bg-primary" href="login.html">Log In/My Account</a>
                 </li>
             </ul>
         </div>
