--- a/Needle11/public/questions.html
+++ b/Needle11/public/questions.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="">
   <link rel="prefetch" href="">
-  <title>Untitled</title><link rel="stylesheet" href="./main.css">
+  <title>Untitled</title><link rel="stylesheet" href="./questions.css">
 <meta name="title" content="Untitled">
 <meta name="description" content="undefined">
-<link rel="canonical" href="https://apply.versoly.page">
+<link rel="canonical" href="https://question.versoly.page">
 
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://apply.versoly.page">
+<meta property="og:url" content="https://question.versoly.page">
 <meta property="og:title" content="Untitled">
 <meta name="twitter:title" content="Untitled">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:url" content="https://apply.versoly.page">
+<meta name="twitter:url" content="https://question.versoly.page">
   <link rel="preconnect" href="https://d1pnnwteuly8z3.cloudfront.net"><link rel="preconnect" href="https://cdnjs.cloudflare.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link rel="preconnect" href="https://fonts.googleapis.com"><script>document.documentElement.classList.add('js')</script>
   
   <style>.d-js {display: none !important;}[data-toggle="modal"] {cursor: pointer;}</style>
@@ -41,27 +41,27 @@ window.vDelayed = {};window.vLoadedDelayed = {};
             <ul class="navbar-col"></ul>
             <ul class="navbar-col">
                 <li>
-                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto] bg-light" href="/#">
+                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto] bg-light" href="front.html">
                         <b>Home</b>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto]" href="#">
+                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto]" href="career.html">
                         <b>Careers</b>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link text-[rgb(51,49,46)]" href="#">
-                        <b class="font-[roboto]">Blog</b>
+                    <a class="nav-link text-[rgb(51,49,46)]" href="aboutus.html">
+                        <b class="font-[roboto]">AboutUs</b>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link text-[rgb(51,49,46)]" href="#">
+                    <a class="nav-link text-[rgb(51,49,46)]" href="contact.html">
                         <b class="font-[roboto]">Contact us</b>
                     </a>
                 </li>
                 <li>
-                    <a class="btn btn-secondary btn-lg nav-link text-[rgb(238,238,238)] bg-[rgb(40,33,56)] hover:text-white hover:bg-primary" href="#">Log In/My Account</a>
+                    <a class="btn btn-secondary btn-lg nav-link text-[rgb(238,238,238)] bg-[rgb(40,33,56)] hover:text-white hover:bg-primary" href="login.html">Log In/My Account</a>
                 </li>
             </ul>
         </div>
@@ -71,9 +71,11 @@ window.vDelayed = {};window.vLoadedDelayed = {};
     <div class="container">
         <div class="row items-center bg-[rgb(238,238,238)]">
             <div class="col py-28 bg-[rgb(238,238,238)] lg:w-6/12">
-                <h1 class="display-4 letter-spacing-xs mb-6 text-[rgb(51,49,46)] font-semibold font-[roboto]">Join Needel Today</h1>
-                <p class="text-lg text-[rgb(51,49,46)] font-[roboto]">Code for the application goes to the right of this panel</p>
-                <div class="flex flex-col md:flex-row justify-center lg:justify-left gap-x-3 gap-y-3"></div>
+                <html>
+
+                <body></body>
+
+                </html>
             </div>
         </div>
     </div>
