--- a/Needle11/public/Login.html
+++ b/Needle11/public/Login.html
@@ -197,7 +197,7 @@
     <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a href="aboutus.html">About Us</a>
             <a href="contact.html">Contact</a>
             <a href="privacy.html">Privacy</a>
             <a href="terms.html">Terms</a>
