--- a/Needle11/public/index.html
+++ b/Needle11/public/index.html
@@ -41,7 +41,7 @@ window.vDelayed = {};window.vLoadedDelayed = {};
             <ul class="navbar-col"></ul>
             <ul class="navbar-col">
                 <li>
-                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto] bg-light" href="front.html">
+                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto] bg-light" href="index.html">
                         <b>Home</b>
                     </a>
                 </li>
