Update Signup.html Line 252 "login.html" to "Login.html"

--- a/Needle11/public/Signup.html
+++ b/Needle11/public/Signup.html
@@ -249,7 +249,7 @@
                 const result = await response.json();
                 if (response.ok) {
                     alert(result.message);
-                    window.location.href = 'login.html'; // Redirect to login page after signup
+                    window.location.href = 'Login.html'; // Redirect to login page after signup
                 } else {
                     errorMessage.textContent = result.message;
                 }
