Added changes to files
Fixed syntax redirects on multiple files. Added comments to script.js. Created web.config xml file for github.

--- a/Needle11/public/Employerpage.html
+++ b/Needle11/public/Employerpage.html
@@ -211,7 +211,7 @@
             <a href="index.html" class="logo">Needel</a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
+                <a href="aboutus.html">About Us</a>
                 <a href="contact.html">Contact</a>
                 <a href="employer.html">Employer Portal</a>
                 <a href="login.html">Login</a>
@@ -249,6 +249,14 @@
                 <h3>Employee Management</h3>
                 <p>Create and manage employee accounts, access permissions, and company resources.</p>
                 <button class="btn">Manage Employees</button>
+            </div>
+            
+            <!-- Company Employees Card -->
+            <div class="action-card" onclick="window.location.href='companyemployee.html'">
+                <i class="fas fa-building"></i>
+                <h3>Company Employees</h3>
+                <p>View and manage all current employees in your organization with detailed profiles.</p>
+                <button class="btn">View Employees</button>
             </div>
         </div>
     </main>
