--- a/Needle11/public/profile.html
+++ b/Needle11/public/profile.html
@@ -76,7 +76,7 @@
         <ul class="navbar-col"></ul>
         <ul class="navbar-col">
           <li>
-            <a class="nav-link text-[rgb(51,49,46)] font-[roboto] bg-light" href="index.html">
+            <a class="nav-link text-[rgb(51,49,46)] font-[roboto] bg-light" href="front.html">
                 <b>Home</b>
             </a>
         </li>
