--- a/Needle11/public/Apply.html
+++ b/Needle11/public/Apply.html
@@ -1,240 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Application | Needle</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Inter', sans-serif;
-        }
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="shortcut icon" href="">
+  <link rel="prefetch" href="">
+  <title>Untitled</title><link rel="stylesheet" href="./apply.css">
+<meta name="title" content="Untitled">
+<meta name="description" content="undefined">
+<link rel="canonical" href="https://apply.versoly.page">
 
-        body {
-            background: linear-gradient(to right, #d3c0eb, #f4e9ff);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .navbar {
-            width: 100%;
-            background: #4c3c92;
-            padding: 15px 0;
-            position: fixed;
-            top: 0;
-            left: 0;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            display: flex;
-            justify-content: center;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 30px;
-        }
-
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            font-size: 1rem;
-            font-weight: 600;
-            transition: 0.3s;
-        }
-
-        .nav-links a:hover {
-            text-decoration: underline;
-        }
-
-        .container {
-            max-width: 500px;
-            width: 100%;
-            background: rgba(255, 255, 255, 0.95);
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-            text-align: center;
-            backdrop-filter: blur(5px);
-            margin-top: 80px;
-        }
-
-        h1 {
-            color: #4c3c92;
-            font-size: 1.8rem;
-            font-weight: 600;
-            margin-bottom: 20px;
-        }
-
-        label {
-            font-weight: 600;
-            display: block;
-            text-align: left;
-            margin: 12px 0 5px;
-            color: #4c3c92;
-        }
-
-        input, select {
-            width: 100%;
-            padding: 12px;
-            border-radius: 8px;
-            border: 1px solid #6c5b8b;
-            background: #f9f5ff;
-            font-size: 1rem;
-            transition: 0.3s;
-        }
-
-        input:focus, select:focus {
-            border-color: #4c3c92;
-            outline: none;
-        }
-
-        button {
-            width: 100%;
-            padding: 12px;
-            margin-top: 20px;
-            background: #4c3c92;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        button:hover {
-            background: #372f6c;
-            transform: scale(1.02);
-        }
-
-        #progress {
-            display: none;
-            margin-top: 10px;
-            font-size: 1rem;
-            font-weight: 600;
-            color: green;
-        }
-
-        #error {
-            display: none;
-            margin-top: 10px;
-            font-size: 1rem;
-            font-weight: 600;
-            color: red;
-        }
-
-    </style>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://apply.versoly.page">
+<meta property="og:title" content="Untitled">
+<meta name="twitter:title" content="Untitled">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://apply.versoly.page">
+  <link rel="preconnect" href="https://d1pnnwteuly8z3.cloudfront.net"><link rel="preconnect" href="https://cdnjs.cloudflare.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link rel="preconnect" href="https://fonts.googleapis.com"><script>document.documentElement.classList.add('js')</script>
+  
+  <style>.d-js {display: none !important;}[data-toggle="modal"] {cursor: pointer;}</style>
 </head>
-<body>
-
-    <div class="navbar">
-        <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact us</a>
-            <a href="terms.html">Terms</a>
-            <a href="employer.html">Employer</a>
+<body class="bg-[rgb(248,248,255)]">
+  
+<script>
+window.vDelayed = {};window.vLoadedDelayed = {};
+</script>
+  <nav class="navbar z-50 sticky top-0 bg-[rgb(238,238,238)]" id="navbar">
+    <div class="container">
+        <a class="navbar-brand text-secondary" href="/">
+            <img class="h-6" alt="company logo" src="images/96b7806e-a8b9-41da-86ce-dde8d712999a.png" width="134" height="27" />
+        </a>
+        <button class="navbar-btn" data-toggle="collapse" data-target="#navbar-row" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="sr-only">Open navbar menu</span>
+            <span class="block h-1 rounded-full bg-secondary"></span>
+            <span class="block h-1 mt-1 rounded-full bg-secondary"></span>
+            <span class="block h-1 mt-1 rounded-full bg-secondary"></span>
+        </button>
+        <div class="navbar-row" id="navbar-row">
+            <ul class="navbar-col"></ul>
+            <ul class="navbar-col"></ul>
+            <ul class="navbar-col">
+                <li>
+                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto] bg-light" href="front.html">
+                        <b>Home</b>
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link text-[rgb(51,49,46)] font-[roboto]" href="career.html">
+                        <b>Careers</b>
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link text-[rgb(51,49,46)]" href="aboutus.html">
+                        <b class="font-[roboto]">AboutUs</b>
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link text-[rgb(51,49,46)]" href="contact.html">
+                        <b class="font-[roboto]">Contact us</b>
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-secondary btn-lg nav-link text-[rgb(238,238,238)] bg-[rgb(40,33,56)] hover:text-white hover:bg-primary" href="login.html">Log In/My Account</a>
+                </li>
+            </ul>
         </div>
     </div>
-
+</nav>
+<section class="py-20" id="header">
     <div class="container">
-        <h1>Job Application</h1>
-
-        <form id="jobApplicationForm">
-            <label for="name">Full Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="resume">Upload Resume:</label>
-            <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" required>
-
-            <label for="coverletter">Upload Cover Letter (optional):</label>
-            <input type="file" id="coverletter" name="coverletter" accept=".pdf,.doc,.docx">
-
-            <label for="referral">Employee Referral:</label>
-            <select id="referral" name="referral" required onchange="redirectReferral()">
-                <option value="">Select</option>
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
-            </select>
-
-            <button type="submit" id="submitBtn">Submit Application</button>
-
-            <div id="progress">Uploading... Please wait.</div>
-            <div id="error"></div>
-        </form>
+        <div class="row items-center bg-[rgb(238,238,238)]">
+            <div class="col py-28 bg-[rgb(238,238,238)] lg:w-6/12">
+                <h1 class="display-4 letter-spacing-xs mb-6 text-[rgb(51,49,46)] font-semibold font-[roboto]">Join Needel Today</h1>
+                <p class="text-lg text-[rgb(51,49,46)] font-[roboto]">Code for the application goes to the right of this panel</p>
+                <div class="flex flex-col md:flex-row justify-center lg:justify-left gap-x-3 gap-y-3"></div>
+            </div>
+        </div>
     </div>
-
-    <script>
-        function redirectReferral() {
-            const referral = document.getElementById('referral').value;
-            if (referral === 'yes') {
-                setTimeout(() => {
-                    window.location.href = 'question.html';
-                }, 500);
-            }
-        }
-
-        document.getElementById("jobApplicationForm").addEventListener("submit", async function(event) {
-            event.preventDefault(); 
-
-            const formData = new FormData(this);
-            const submitBtn = document.getElementById("submitBtn");
-            const progress = document.getElementById("progress");
-            const errorDiv = document.getElementById("error");
-
-           
-            const resume = document.getElementById("resume").files[0];
-            const coverLetter = document.getElementById("coverletter").files[0];
-            const allowedExtensions = /(\.pdf|\.doc|\.docx)$/i;
-
-            if (!resume || !allowedExtensions.exec(resume.name)) {
-                alert("Please upload a valid resume file (PDF, DOC, DOCX).");
-                return false;
-            }
-
-            if (coverLetter && !allowedExtensions.exec(coverLetter.name)) {
-                alert("Please upload a valid cover letter file (PDF, DOC, DOCX).");
-                return false;
-            }
-
-            submitBtn.disabled = true;
-            progress.style.display = "block";
-            errorDiv.style.display = "none";
-            errorDiv.innerText = "";
-
-            try {
-                const response = await fetch("/upload-job", {
-                    method: "POST",
-                    body: formData
-                });
-
-                const data = await response.json();
-
-                if (response.ok) {
-                    progress.innerText = "Application submitted successfully!";
-                    setTimeout(() => {
-                        window.location.href = "confirmation.html";
-                    }, 2000);
-                } else {
-                    throw new Error(data.message || "Failed to upload.");
-                }
-            } catch (error) {
-                errorDiv.style.display = "block";
-                errorDiv.innerText = error.message;
-            } finally {
-                submitBtn.disabled = false;
-                setTimeout(() => progress.style.display = "none", 2000);
-            }
-        });
+</section>
+<footer class="relative pt-16 pb-16 overflow-clip bg-[rgb(238,238,238)] lg:pb-8" id="footer">
+    <div class="container">
+        <div class="row mb-12 gap-y-8">
+            <div class="col lg:w-[40%] text-left">
+                <a class="navbar-brand text-white mb-5 md:mb-6 lg:mb-8" href="/">
+                    <img src="images/96b7806e-a8b9-41da-86ce-dde8d712999a.png" />
+                </a>
+                <div class="mb-5 md:mb-6 lg:mb-8"></div>
+            </div>
+            <div class="col lg:w-[30%]">
+                <div class="row">
+                    <div class="col sm:w-6/12 mb-8 lg:mb-0 flex flex-col gap-y-3">
+                        <p class="mb-3 text-xl text-[rgb(51,49,46)] font-semibold font-[roboto]">Company</p>
+                        <a class="block text-[rgb(51,49,46)] font-light font-[roboto] hover:text-neutral-200" href="#">About Us</a>
+                        <a class="block text-[rgb(51,49,46)] font-light font-[roboto] hover:text-neutral-200" href="#">Careers</a>
+                        <a class="block text-[rgb(51,49,46)] font-light font-[roboto] hover:text-neutral-200" href="#">Blog</a>
+                    </div>
+                    <div class="col sm:w-6/12 mb-8 lg:mb-0 flex flex-col gap-y-3">
+                        <p class="mb-3 text-xl text-[rgb(51,49,46)] font-semibold font-[roboto]">Contact</p>
+                        <a class="block text-[rgb(51,49,46)] font-light font-[roboto] hover:text-neutral-200" href="#">+123 456-7890</a>
+                        <a class="block text-[rgb(51,49,46)] font-light font-[roboto] hover:text-neutral-200" href="#">info@fin.sweet</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col lg:w-[30%] md:mb-0 flex flex-col gap-y-2">
+                <p class="mb-3 text-xl text-[rgb(51,49,46)] font-semibold font-[roboto] bg-[rgb(238,238,238)]">Stay Updated</p>
+                <form>
+                    <div class="row gap-y-3">
+                        <div class="col">
+                            <input class="form-input bg-[rgb(248,248,255)]" type="email" name="email" placeholder="Type email here" required="" />
+                        </div>
+                        <div class="col">
+                            <button class="btn btn-primary btn-lg text-[rgb(238,238,238)] bg-[rgb(40,33,56)]" type="submit">Subscribe</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</footer>
+  <script>
+    poweredByHTML = '<div class="position-fixed fixed px-2 z-[1000]" style="bottom: 10px;right:0;"><a href="https://versoly.com" target="_blank" class="btn btn-dark btn-sm text-white font-semibold px-2"><img alt="Versoly Logo" height="20" width="20" class="mt-n1 mr-1" src="https://d1pnnwteuly8z3.cloudfront.net/images/dafc1e05-b0e8-4c6d-b375-4a62333bbd5a/e9b5a585-0df6-4d25-b7f9-070785381e7c.png"><span>Made in Versoly</span></a></div>'
+    setTimeout(() => document.body.insertAdjacentHTML('beforeend', poweredByHTML), 7000)
     </script>
+  
+<script src="https://d1pnnwteuly8z3.cloudfront.net/libs/webfont/1.6.28/webfont.js"></script>
+<script>WebFont.load({google: {families: ['Inter:300,300i,400,500,600,700,800&display=swap']}})</script>
+<script>
+(function(){
+s=document.createElement("script");
+s.src="https://d1pnnwteuly8z3.cloudfront.net/libs/floating-ui/1.0.1/floating-ui.min.js";
+s.async = false;
+document.body.appendChild(s);
+})();
+</script>
+<script>
 
+(() => {
+var scriptUrl = 'https://d1pnnwteuly8z3.cloudfront.net/libs/versoly-ui/2.1.1/versoly-ui.js';
+window.vLoadedDelayed[scriptUrl] = false;
+
+window.vDelayed[scriptUrl] = () => {
+  if (vLoadedDelayed[scriptUrl]) {
+    return
+  }
+  vLoadedDelayed[scriptUrl] = true;
+  s=document.createElement("script");
+s.src="https://d1pnnwteuly8z3.cloudfront.net/libs/versoly-ui/2.1.1/versoly-ui.js";
+s.async = false;
+document.body.appendChild(s);
+};
+
+addEventListener('DOMContentLoaded', () => setTimeout(vDelayed[scriptUrl], 5000));
+addEventListener('scroll', () => setTimeout(vDelayed[scriptUrl], 300), {once: true});
+['click', 'mousemove'].forEach(e => addEventListener(e, vDelayed[scriptUrl], {once: true}));
+})();
+</script>
+<script>
+if (document.getElementById("navbar")) {
+  var style = document.createElement('style');
+  style.innerHTML = '* {scroll-margin-top: ' + document.getElementById("navbar").offsetHeight + 'px}';
+  document.head.appendChild(style);
+}
+</script>
+  
+  
+  
 </body>
 </html>
