--- a/Needle11/public/Login.html
+++ b/Needle11/public/Login.html
@@ -249,7 +249,7 @@
                 const result = await response.json();
                 if (response.ok) {
                     alert("Login successful!"); // Show a success message
-                    window.location.href = 'home.html'; // Redirect to home page
+                    window.location.href = 'index.html'; // Redirect to home page
                 } else {
                     errorMessage.textContent = result.message || "Invalid email or password.";
                 }
