--- a/Needle11/public/Login.html
+++ b/Needle11/public/Login.html
@@ -299,7 +299,7 @@
  
         <div class="links">
 <a href="forgot.html">Forgot Password?</a> |
-<a href="signup.html">Create an Account</a>
+<a href="Signup.html">Create an Account</a>
 </div>
 </div>
  
