--- a/Needle11/public/Login.html
+++ b/Needle11/public/Login.html
@@ -271,11 +271,11 @@
 <div class="navbar">
 <div class="nav-links">
 <a href="index.html">Home</a>
-<a href="about.html">About Us</a>
+<a href="aboutus.html">About Us</a>
 <a href="contact.html">Contact</a>
 <a href="privacy.html">Privacy</a>
 <a href="terms.html">Terms</a>
-<a href="employer.html">Employer</a>
+<a href="Employer.html">Employer</a>
 </div>
 </div>
  
