--- a/Needle11/public/Employer.html
+++ b/Needle11/public/Employer.html
@@ -495,7 +495,7 @@
                 showMessage(messageElement, 'Login successful! Redirecting...', false);
 
                 setTimeout(() => {
-                    window.location.href = '/employerpage.html';
+                    window.location.href = '/Employerpage.html';
                 }, 1500);
 
             } catch (error) {
