--- a/Needle11/public/home.html
+++ b/Needle11/public/home.html
@@ -172,7 +172,7 @@
             activeJobs.forEach((job, index) => {
                 const jobItem = document.createElement("a");
                 jobItem.classList.add("job-item");
-                jobItem.href = `apply.html?${new URLSearchParams(job).toString()}`;
+                jobItem.href = `Apply.html?${new URLSearchParams(job).toString()}`;
                 jobItem.style.textDecoration = "none";
                 jobItem.style.color = "inherit";
                 jobItem.style.display = "block";
